basic project completed

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
-    <h1>
-        JavaScript Library Project
-    </h1>
-    <button class="add-book">Add a New Book</button>
+    <div class="main">
+        <h1>
+            JavaScript Library Project
+        </h1>
+        <button class="add-book">Add a New Book</button>
+    </div>
     <div class="form-container">
         <form class="formClass">
             <div class="line-container">
@@ -39,7 +41,6 @@
         </form>
     </div>
     <div class="book-container">
-
     </div>
 </body>
 <script src="script.js"></script>
