add few features and local storage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div class="LCitem">
+        <button class="clearLC">Clear Local Storage</button>
+    </div>
     <div class="main">
         <h1>
             JavaScript Library Project
