add close button in container where add book

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <div class="form-container">
         <form class="formClass">
             <div class="line-container">
+                <div class="closeBtn">
+                    <button id="close" type="button">Close</button>
+                </div>
                 <div class="line1 line">
                     <label for="book-name">Book Name:</label>
                     <input type="text" id="book-name">
